Fix client table spacing

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -22,6 +22,7 @@ table {
     margin-left: auto;
     margin-right: auto;
     background-color: #ffffff;
+    border-spacing: 0;
 }
 
 tr {
